{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 14,
  "lineage": "238b60a1-445e-2b68-860e-cd7925f9ec89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:subnet/subnet-0cd1888c928e49b6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0cd1888c928e49b6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "842905459753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "CreatedBy": "Terraform",
              "Owner": "Nikita S",
              "Project": "Terraform Lesson 12"
            },
            "vpc_id": "vpc-0cc30a0df52e676a0"
          },
          "dependencies": [
            "data.aws_availability_zones.availablity_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:subnet/subnet-0d804a6b692c0b316",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d804a6b692c0b316",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "842905459753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "CreatedBy": "Terraform",
              "Owner": "Nikita S",
              "Project": "Terraform Lesson 12"
            },
            "vpc_id": "vpc-0cc30a0df52e676a0"
          },
          "dependencies": [
            "data.aws_availability_zones.availablity_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:vpc/vpc-0cc30a0df52e676a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-06f71c4228f3f8aab",
            "default_route_table_id": "rtb-0e65cab8cefb016f1",
            "default_security_group_id": "sg-0eb3085baded66486",
            "dhcp_options_id": "dopt-0784c1b33a404331b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0cc30a0df52e676a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e65cab8cefb016f1",
            "owner_id": "842905459753",
            "tags_all": {
              "CreatedBy": "Terraform",
              "Owner": "Nikita S",
              "Project": "Terraform Lesson 12"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:842905459753:loadbalancer/app/WebServer-Highly-Available-ALB/df6141970d8eaf9c",
            "arn_suffix": "app/WebServer-Highly-Available-ALB/df6141970d8eaf9c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebServer-Highly-Available-ALB-897089305.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:842905459753:loadbalancer/app/WebServer-Highly-Available-ALB/df6141970d8eaf9c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebServer-Highly-Available-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01cb57bbe90778621"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cd1888c928e49b6f"
              },
              {
                "subnet_id": "subnet-0d804a6b692c0b316"
              }
            ],
            "subnets": [
              "subnet-0cd1888c928e49b6f",
              "subnet-0d804a6b692c0b316"
            ],
            "tags_all": {
              "CreatedBy": "Terraform",
              "Owner": "Nikita S",
              "Project": "Terraform Lesson 12"
            },
            "vpc_id": "vpc-0cc30a0df52e676a0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_default_subnet.default_az_1",
            "aws_default_subnet.default_az_2",
            "aws_default_vpc.default",
            "aws_security_group.web_sg",
            "data.aws_availability_zones.availablity_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_lb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:842905459753:listener/app/WebServer-Highly-Available-ALB/df6141970d8eaf9c/1769ef209c21ab12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:842905459753:targetgroup/WebServer-Highly-Available-TG/77d45c841c9c41e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:842905459753:listener/app/WebServer-Highly-Available-ALB/df6141970d8eaf9c/1769ef209c21ab12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:842905459753:loadbalancer/app/WebServer-Highly-Available-ALB/df6141970d8eaf9c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CreatedBy": "Terraform",
              "Owner": "Nikita S",
              "Project": "Terraform Lesson 12"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.default_az_1",
            "aws_default_subnet.default_az_2",
            "aws_default_vpc.default",
            "aws_lb.web_lb",
            "aws_lb_target_group.web_lb_tg",
            "aws_security_group.web_sg",
            "data.aws_availability_zones.availablity_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:842905459753:targetgroup/WebServer-Highly-Available-TG/77d45c841c9c41e6",
            "arn_suffix": "targetgroup/WebServer-Highly-Available-TG/77d45c841c9c41e6",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:842905459753:targetgroup/WebServer-Highly-Available-TG/77d45c841c9c41e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:842905459753:loadbalancer/app/WebServer-Highly-Available-ALB/df6141970d8eaf9c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebServer-Highly-Available-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CreatedBy": "Terraform",
              "Owner": "Nikita S",
              "Project": "Terraform Lesson 12"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cc30a0df52e676a0"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:842905459753:security-group/sg-01cb57bbe90778621",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cb57bbe90778621",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Dinamic Security Group",
            "name_prefix": "",
            "owner_id": "842905459753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for WebServer"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "SG for WebServer",
              "Owner": "Nikita S",
              "Project": "Terraform Lesson 12"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc30a0df52e676a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}